# Location-Problem

./: .gitignore  CMakeLists.txt  Parse.cpp  Parse.h  README.md  datatest.txt  main.cpp  nodes.csv
model/: Headquater.cpp  Headquater.h  Map.cpp  Map.h  Place.cpp  Place.h  Solution.cpp  Solution.h  Truck.cpp  Truck.h  headquater.cpp  headquater.h  map.cpp  map.h  place.cpp  place.h  road.cpp  road.h  truck.cpp  truck.h
strategy/: ApproximateStrategy.cpp  ExactStrategy.cpp  Node.cpp  Node.h  Strategies.h  approximate_strategy.cpp  exact_strategy.cpp  strategies.h
utils/: Location.cpp  Location.h  Parse.cpp  Parse.h  location.cpp  utils.h
